package edu.hitsz.props;

import edu.hitsz.basic.AbstractFlyingObject;

public abstract class AbstractProps extends AbstractFlyingObject {
    public AbstractProps(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
