@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setSpeed(int speedX, int speedY):void
    + setShootStrategy(ShootStrategy shootStrategy):void
    + {abstract} executeShootStrategy():List<BaseBullet>}
 }


class HeroAircraft {
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
    + {static} getHeroAircraft():HeroAircraft
    + forward():void
    + executeShootStrategy():List<BaseBullet>
    + setHp(int hp):void
}

AbstractAircraft <|-- HeroAircraft

class AbstractEnemy {
    - power:int
    - direction:int
	+ AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
	+ forward():void
}

AbstractAircraft <|-- AbstractEnemy

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp， ShootStrategy shootStrategy)
    + executeShootStrategy():List<BaseBullet>
}
AbstractEnemy <|-- MobEnemy

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
    + executeShootStrategy():List<BaseBullet>
}
AbstractEnemy <|-- BossEnemy

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
    + executeShootStrategy():List<BaseBullet>
}
AbstractEnemy <|-- EliteEnemy

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
    + executeShootStrategy():List<BaseBullet>
}
AbstractEnemy <|-- ElitePlusEnemy

class EliteProEnemy {
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy shootStrategy)
    + executeShootStrategy():List<BaseBullet>
}
AbstractEnemy <|-- EliteProEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class AbstractProps {
	+ AbstractProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractFlyingObject <|-- AbstractProps

class BloodProps {
	+ BloodProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractProps <|-- BloodProps

class BombProps {
	+ BombProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractProps <|-- BombProps

class BulletProps {
	+ BulletProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractProps <|-- BulletProps

class BulletPlusProps {
	+ BulletPlusProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractProps <|-- BulletPlusProps

class FreezeProps {
	+ FreezeProps(int locationX, int locationY, int speedX, int speedY)
}
AbstractProps <|-- FreezeProps

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

@enduml